--- a/modules/custom/templates/apache/vhosts/default.conf.erb
+++ b/modules/custom/templates/apache/vhosts/default.conf.erb
@@ -3,6 +3,9 @@
     ServerAdmin <%= @server_admin_email ||= 'webmaster@localhost' %>
     DocumentRoot <%= @real_docroot %>
     
+    <% if @server_name_value != false -%>
+        ServerName <%= @server_name_value %>
+    <% end -%>
     <% if @serveraliases != "" -%>
     <% if @serveraliases.is_a? Array -%>
         ServerAlias <%= @serveraliases.flatten.join(" ") %>
